<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CCFCFCFC"
    android:paddingBottom="10dp"
    android:paddingTop="5dp" >

    <ImageView
        android:id="@+id/imgUser"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/user_profile_image"
        android:paddingLeft="10dp"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:id="@+id/tvUsername"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/imgUser"
        android:paddingBottom="0dp"
        android:paddingLeft="10dp"
        android:text="@string/username_text_view"
        android:fontFamily="roboto"/>

    <TextView
        android:id="@+id/tvTweetBody"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvUsername"
        android:layout_toRightOf="@+id/imgUser"
        android:drawablePadding="2dp"
        android:paddingLeft="10dp"
        android:paddingTop="0dp"
        android:text="@string/tweet_body"
        android:autoLink="all"
        android:linksClickable="true"
        android:maxLines="10"
        android:textColor="#606060"
        android:fontFamily="roboto"/>

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/date_text_view"
        android:textColor="#B3B3B3" />

    <ImageView
        android:id="@+id/imgTweet"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/tvTweetBody"
        android:contentDescription="@string/user_profile_image"
        android:paddingLeft="10dp"
        android:src="@drawable/ic_launcher" />

	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:orientation="horizontal"
	    android:layout_below="@+id/imgTweet"
	    android:paddingTop="3dp"
	    android:paddingBottom="3dp">

	    
	    <ImageButton
	        android:id="@+id/btnReply"
	        android:layout_width="wrap_content"
	        android:layout_height="18dp"
	        android:contentDescription="@string/back_button_desc"
	        android:paddingLeft="20dp"
	        android:background="#FFFFFF"
	        android:src="@drawable/ic_reply"
	        android:onClick="onReply" />

	    <TextView
	        android:id="@+id/tvRetweets"
	        android:layout_width="wrap_content"
	        android:layout_height="18dp"
	        android:drawableLeft="@drawable/ic_retweet"
	        android:text="@string/retweet_text"
	        android:paddingLeft="50dp"
	        android:textColor="#606060"
	        android:clickable="true"
	        android:onClick="onRetweet" />
	
	    <TextView
	        android:id="@+id/tvLikes"
	        android:layout_width="wrap_content"
	        android:layout_height="18dp"
	        android:paddingLeft="50dp"
	        android:drawableLeft="@drawable/ic_star"
	        android:text="@string/tweet_likes"
	        android:textColor="#606060" />

	</LinearLayout>

</RelativeLayout>
